--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -464,9 +464,9 @@ distributed intelligent computing through logic decoupling and independent imple
 					</div>
 				</div>
 			</div>
-			<h2>ADVISOR
+			<h1>ADVISOR
 				<!-- <span>ADVISOR</span> -->
-			</h2>
+			</h1>
 			<div class="row team-wrapper team-wrapper2">
 				<div class="col-md-2 col-xxs-4  ">
 					<div class="head">
@@ -521,7 +521,7 @@ distributed intelligent computing through logic decoupling and independent imple
 	</section>
 <section id="partners" class="use partners">
 	<div class="container">
-		<h1>PARTNERS</h1>
+		<h1>Investor</h1>
 		<!-- <span>PARTNERS</span> -->
 		<div class="row partners-wrapper">
 			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
