去掉部分元素

--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -28,9 +28,12 @@ distributed intelligent computing through logic decoupling and independent imple
 					</ul>
 				</div>
 			</div>
-			<div class="crowd col-md-5 hidden-sm  hidden-xs hidden-xxs">
+			<!-- <div class="crowd col-md-5 hidden-sm  hidden-xs hidden-xxs"> -->
+      <div class="crowd col-md-5 ">
+				<p class="countdown-top">Launch Count Down</p>
+				<div id="getting-started" class="countdown"></div>
 
-         <img style="width: 100%; margin-top: -30px;" class="work-img" src="<%= require('../../../img/index/fimg1.png') %>" alt="">
+         <!-- <img style="width: 100%; margin-top: -30px;" class="work-img" src="<%= require('../../../img/index/fimg1.png') %>" alt=""> -->
 
 			</div>
 
@@ -415,14 +418,14 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Li Monan</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 ">
+				<!-- <div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/alex.png') %>" alt="">
 						</div>
 						<p class="name">Alex Lototskiy</p>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
@@ -447,14 +450,14 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Gao Haiqiang</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 ">
+				<!-- <div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/Oleg.png') %>" alt="">
 						</div>
 						<p class="name">Oleg Lyamtsev</p>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
