--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -414,6 +414,7 @@ section.team{
 			.background-clip(text);
 			-webkit-text-fill-color: transparent;
 			text-align: center;
+			min-height: 100px;
 		}
 	}
 }
@@ -671,6 +672,7 @@ section.partners{
 				font-size: 16px;
 				min-height: 40px;
 				line-height: 16px;
+				// min-height: 100px;
 			}
 		}
 		h2{
