--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -576,6 +576,25 @@ distributed intelligent computing through logic decoupling and independent imple
 
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/1.yingbiziben.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/2.kosmos.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/3.NGC.png') %>" alt="">
+				</div>
+			</div>
+
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
 					<img class="yfy" src="<%= require('../../../img/partner/7_IOST.png') %>" alt="">
 				</div>
 			</div>
@@ -583,6 +602,35 @@ distributed intelligent computing through logic decoupling and independent imple
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
 					<img class="yfy" src="<%= require('../../../img/partner/8_DATA.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/4.timestamp.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/5.feiniaoshequ.png') %>" alt="">
+				</div>
+			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/6.xinglianziben.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/8.hongan.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/11_jiduziben.png') %>" alt="">
 				</div>
 			</div>
 
@@ -599,13 +647,21 @@ distributed intelligent computing through logic decoupling and independent imple
 				</div>
 			</div>
 
-
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/7.bluehill.png') %>" alt="">
+				</div>
+			</div>
 
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
-					<img class="yfy" src="<%= require('../../../img/partner/11_jiduziben.png') %>" alt="">
+					<img class="yfy" src="<%= require('../../../img/partner/9.tokenmania.png') %>" alt="">
 				</div>
 			</div>
+
+
+
+
 
 
 
