--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -13,6 +13,7 @@
 							<li class="mao"><a  href="javascript:;" >Ecosystems</a></li>
 							<li class="mao"><a  href="javascript:;" >RoadMap</a></li>
 							<li class="mao"><a  href="http://blog.lambda.im/" >Blog</a></li>
+							<li class="mao"><a  href="mailto:info@lambda.im" >contact us</a></li>
 						</ul>
 					<% } else {%>
 						<ul>
