--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -49,6 +49,11 @@
 								ROADMAP
 							</a>
 						</div>
+						<div class="nav-item mao" >
+							<a href="mailto:info@lambda.im" >
+								CONTACT US
+							</a>
+						</div>
 					<% } %>
 					<div class="nav-item" style="float:right">
 						<!-- <a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
@@ -73,6 +78,7 @@
 								<li class="mao"><a href="javascript:;">WORKING PRINCIPLE</a></li>
 								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
 								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
+								<li class="mao"><a href="mailto:info@lambda.im">CONTACT US</a></li
 							<% } %>
 						</ul>
 					</div>
