--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -896,3 +896,14 @@ section.partners{
 .firstbgimg{
 	// background-image: url();
 }
+
+.firstBtn{
+	margin-right: 20px;
+	width: 230px;
+	text-align: center;
+}
+.sendBtn{
+	width: 230px;
+	text-align: center;
+
+}
