--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -10,7 +10,8 @@
 distributed intelligent computing through logic decoupling and independent implementation of Lambda Chain and Lambda DB
 
 				</p>
-				<a class="btn" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
+				<a class="btn firstBtn" href="https://www.lambda.im/doc/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
+				<a class="btn sendBtn" href="https://token.lambda.im/#/whitelist" target="_blank">Go Whitelist</a>
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
 					<ul>
