--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -50,14 +50,13 @@
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="mailto:info@lambda.im" >
-								CONTACT US
+							<a href="https://token.lambda.im/#/register" >
+								REGISTER/SIGN UP
 							</a>
 						</div>
 					<% } %>
 					<div class="nav-item" style="float:right">
-						<!-- <a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
-						<a href="/index.html" style="display: inline-block; width: 30px; height: 20px;" ><img style="width: 100%; height: 100%" src="<%= require('../../img/public/china@2x.png') %>" alt=""></a> -->
+
 					</div>
 				</div>
 				<div class="navbar-toggle-btn">
@@ -78,25 +77,15 @@
 								<li class="mao"><a href="javascript:;">WORKING PRINCIPLE</a></li>
 								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
 								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
-								<li class="mao"><a href="mailto:info@lambda.im">CONTACT US</a></li
+								<li class="mao"><a href="https://token.lambda.im/#/register">REGISTER/SIGN UP</a></li
 							<% } %>
 						</ul>
 					</div>
-					<!-- <div class="nav-item" id="solutions" style="border-bottom: 1px solid rgba(255, 255, 255, 0.2);">
-						<a href="/solutions/feature.html" target="_blank">
-							方案
-						</a>
-					</div> -->
-					<!-- <div class="nav-item" id="case">
-						<a href="/case/feature.html" target="_blank">
-							案例
-						</a>
-					</div> -->
+
 
 					<div class="nav-item" id="language">
 						<ul>
-							<!-- <li><a href="/index.html">中文</a></li>
-							<li><a href="/en/index.html">English</a></li> -->
+
 						</ul>
 					</div>
 				</div>
