--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -43,4 +43,15 @@
 			</div>
 		</div>
 	</div>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121455265-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121455265-1');
+
+
+</script>
 </footer>
