--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="contents">
 			<div class="logo">
-				<img src="<%= require('../../img/logowhite.svg') %>" alt="">
+				<img height="53" src="<%= require('../../img/Lambda bridge pool-logowhite.svg') %>" alt="">
 			</div>
 			<div class="info">
 				<div class="about">
