--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -3,7 +3,8 @@
 			<div class="container">
 				<div class="logo">
 					<a href="/index.html">
-						<img src="<%= require('../../img/logowhite.svg') %>" alt="">
+						<!-- <img src="<%= require('../../img/logowhite.svg') %>" alt=""> -->
+						<img height="53" src="<%= require('../../img/Lambda bridge pool-logowhite.svg') %>" alt="">
 					</a>
 				</div>
 				<div class="navbar nav-right">
