--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -406,6 +406,12 @@ section.team{
 				display: block;
 				width: 100%;
 			}
+			.userlinkimg{
+				position: absolute;
+				width: 20px;
+				bottom: 0px;
+				left: 0px;
+			}
 		}
 		.name{
 			font-size: 20px;
@@ -906,4 +912,9 @@ section.partners{
 	width: 230px;
 	text-align: center;
 
+}
+
+
+.userimga{
+	position: relative;
 }
