--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -13,7 +13,7 @@ distributed intelligent computing through logic decoupling and independent imple
 				<a class="btn firstBtn" href="https://www.lambda.im/doc/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
 				<a class="btn sendBtn" href="https://token.lambda.im/#/register" target="_blank">Go Whitelist</a>
 				<div class="contact">
-					<!-- <h3 class="title">联系我们</h3> -->
+
 					<ul>
 						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../../img/index/telegram.png') %>"/></a></li>
 						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/twitter.png') %>"/></a></li>
@@ -88,47 +88,7 @@ distributed intelligent computing through logic decoupling and independent imple
 					<p class="intro">In the field of artificial intelligence, the current consensus is that the role of data is many times larger than that of the model. However, the acquisition of metadata is a difficult and expensive issue. The shortage of data hinders the development of the artificial intelligence industry. At present, because of lack of trust, data abuse and other reasons, individuals are unwilling to contribute data, and business organizations that have need obtain data through unconventional means. Lambda will eventually form an integrated network of huge data storage space, and data owners can sell their data through smart contracts on Lambda's trading platform. In particular, the value of time-series data lies in the insights after the analysis. Data owners do not need to sell the original data, but only sell the analysis results of the data, and even the insights on the results of the data analysis.</p>
 				</div>
 			</div>
-			<!-- <div class="row">
-				<div class="col-xs-12">
-					<div class="tab-btn">
-						<div class="line"></div>
-						<div class="item active col-md-1 col-sm-2 col-xxs-3">
-							<div class="btn-icon">
-								<i></i>
-							</div>
-							<p>分布式应用</p>
-						</div>
-						<div class="item col-md-1 col-sm-2 col-lg-offset-half col-md-offset-half col-sm-offset-half col-xs-3 col-xxs-offset-0">
-							<div class="btn-icon">
-								<i></i>
-							</div>
-							<p>区块链</p>
-						</div>
-						<div class="item col-md-1 col-sm-2 col-lg-offset-half col-md-offset-half col-sm-offset-half col-xs-3 col-xxs-offset-0">
-							<div class="btn-icon">
-								<i></i>
-							</div>
-							<p>物联网</p>
-						</div>
-						<div class="item col-md-1 col-sm-2 col-lg-offset-half col-md-offset-half col-sm-offset-half col-xxs-3 col-xxs-offset-0">
-							<div class="btn-icon">
-								<i></i>
-							</div>
-							<p>人工智能</p>
-						</div>
-					</div>
-				</div>
-			</div> -->
-			<!-- <div class="row">
-				<div class="col-lg-8 col-md-8">
-					<div class="tab-contents">
-						<p class="contents-active">目前分布式应用依靠以太坊和 IPFS 来搭建，但 IPFS 因为缺乏信息检索导致响应速度慢。而 lambda 的结构化数据，加上采用分片、分区的策略提供快速读写的能力，可以优雅地解决该问题。 在分布式应用爆发的今天，无论是信息源工具、通讯工具，还是泛娱乐服务，都应该使用 lambda 去中心化的结构云存储方案。提供更可靠、更快速、更安全的存储方案。</p>
-						<p>在现存的区块链存储方案中，有存储于区块链本身的方案，或者点对点的文件系统，以及分布式云存储。三者皆存在缺陷。存于区块链上会造成交易慢、单点存储量大的问题，而点对点需要用户在线，分布式云存储仅支持静态文件无法更新，不易被程序访问。 因此，lambda 针对上诉现状进行改造，保持永远在线、读写速度快、支持富媒体等多样类型。</p>
-						<p>物联网的存储量庞大，且存在时序性、更新频率快等特征。而基于区块链技术的存储解决方案 lambda 本身的时间戳功能，以及高扩展能力可以很好地适应物联网的诉求。 无论是 IoT 还是 IoE 场景，lambda 高性价比的存储方案，既可以避免云计算带来的能耗问题，又比网络边缘计算更能适应时序的存储要求。</p>
-						<p>在人工智能领域，数据的价值越发重要，而区块链本身交换价值的特性，特别适用于使用区块链技术来交换数据。数据拥有者采用智能合约出售原始数据，进而再次出售分析结果，形成一个闭环。 Lambda 基于时序和数据交换的功能，能够在人工智能领域孵化更好的生态系统。</p>
-					</div>
-				</div>
-			</div> -->
+
 		</div>
 	</section>
 	<section id="design" class="use design">
@@ -406,65 +366,77 @@ distributed intelligent computing through logic decoupling and independent imple
 				<div class="col-md-2 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/hxy.png') %>" alt="">
+							<a target="_blank" class="userimga" href="https://www.linkedin.com/in/xiaoyang-he-0083b428/">
+								<img src="<%= require('../../../img/index/hxy.png') %>" alt="">
+								<img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+
+							</a>
 						</div>
-						<p class="name">He Xiaongyang</p>
+						<p class="name">
+							<a  href="https://www.linkedin.com/in/xiaoyang-he-0083b428/" >He Xiaongyang</a>
+						</p>
+
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/lmn.png') %>" alt="">
+							<a target="_blank" class="userimga" href="https://www.linkedin.com/in/monanli/">
+							 <img src="<%= require('../../../img/index/lmn.png') %>" alt="">
+							 <img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+						  </a>
 						</div>
-						<p class="name">Li Monan</p>
+						<p class="name"><a href="https://www.linkedin.com/in/monanli/">Li Monan</a></p>
 					</div>
 				</div>
-				<!-- <div class="col-md-2 col-xxs-4 ">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/alex.png') %>" alt="">
-						</div>
-						<p class="name">Alex Lototskiy</p>
-					</div>
-				</div> -->
+
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/hbq.png') %>" alt="">
+							<a target="_blank" class="userimga" href="https://www.linkedin.com/in/bingqing-he-119019b1/">
+								<img src="<%= require('../../../img/index/hbq.png') %>" alt="">
+								<img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+							</a>
 						</div>
-						<p class="name">He Bingqing</p>
+						<p class="name">
+							<a target="_blank"  href="https://www.linkedin.com/in/bingqing-he-119019b1/">
+								He Bingqing
+							</a>
+						</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/ghq.png') %>" alt="">
+							<a  target="_blank" class="userimga" href="https://www.linkedin.com/in/hongqiangguo/">
+								<img src="<%= require('../../../img/index/ghq.png') %>" alt="">
+								<img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+							</a>
 						</div>
-						<p class="name">Guo Hongqiang</p>
+						<p class="name"><a href="https://www.linkedin.com/in/hongqiangguo/">Guo Hongqiang</a></p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/gaohq.png') %>" alt="">
+							<a target="_blank" class="userimga" href="https://www.linkedin.com/in/%E6%B5%B7%E5%BC%BA-%E9%AB%98-187a60166/">
+								<img src="<%= require('../../../img/index/gaohq.png') %>" alt="">
+								<img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+							</a>
 						</div>
-						<p class="name">Gao Haiqiang</p>
+						<p class="name"><a href="https://www.linkedin.com/in/%E6%B5%B7%E5%BC%BA-%E9%AB%98-187a60166/">Gao Haiqiang</a></p>
 					</div>
 				</div>
-				<!-- <div class="col-md-2 col-xxs-4 ">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/Oleg.png') %>" alt="">
-						</div>
-						<p class="name">Oleg Lyamtsev</p>
-					</div>
-				</div> -->
+
 				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../../img/index/zhj.png') %>" alt="">
+							<a target="_blank" class="userimga" href="https://www.linkedin.com/in/haijun-zhao-0a76652b/">
+								<img src="<%= require('../../../img/index/zhj.png') %>" alt="">
+								<img class="userlinkimg" src="<%= require('../../../img/index/linkedin.png') %>" alt="">
+							</a>
 						</div>
-						<p class="name">Zhao Haijun</p>
+						<p class="name"><a href="https://www.linkedin.com/in/haijun-zhao-0a76652b/">Zhao Haijun</a></p>
 					</div>
 				</div>
 			</div>
@@ -528,21 +500,7 @@ distributed intelligent computing through logic decoupling and independent imple
 		<h1>Investor</h1>
 		<!-- <span>PARTNERS</span> -->
 		<div class="row partners-wrapper">
-			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-				<div class="partners-logo">
-					<img src="<%= require('../../../img/index/apache.png') %>" alt="">
-				</div>
-			</div> -->
-			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-				<div class="partners-logo">
-					<img src="<%= require('../../../img/index/oneapm.png') %>" alt="">
-				</div>
-			</div>
-			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-				<div class="partners-logo partners-logoyfy">
-					<img class="yfy" src="<%= require('../../../img/index/yfy.png') %>" alt="">
-				</div>
-			</div> -->
+
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
 					<img class="yfy" src="<%= require('../../../img/partner/1_zhenge.png') %>" alt="">
