--- a/src/view/layout/html.ejs
+++ b/src/view/layout/html.ejs
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title><%= pf.pageTitle %></title>
 	<meta name="description" content="<%= pf.description %>"/>
-	<meta name="keywords" content="<%= pf.keywords %>">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5">
+	<meta name="keywords" content="<%= pf.keywords %>"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5"/>
+	<meta name="google-site-verification" content="ZT-WvVdf7QOX8D0jKOHoVZ8eOWvWlAcTbRgyykmxFEk" />
 </head>
 <body>
 	<%= header %>
