--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -29,12 +29,16 @@ distributed intelligent computing through logic decoupling and independent imple
 					</ul>
 				</div>
 			</div>
-			<!-- <div class="crowd col-md-5 hidden-sm  hidden-xs hidden-xxs"> -->
-      <div class="crowd col-md-5 ">
-				<p class="countdown-top">Launch Count Down</p>
-				<div id="getting-started" class="countdown"></div>
+			<div class="crowd col-md-5 hidden-sm  hidden-xs hidden-xxs">
+      <!-- <div class="crowd col-md-5 "> -->
+				<!-- <p class="countdown-top">Launch Count Down</p>
+				<div id="getting-started" class="countdown"></div> -->
 
-         <!-- <img style="width: 100%; margin-top: -30px;" class="work-img" src="<%= require('../../../img/index/fimg1.png') %>" alt=""> -->
+
+ <img style="width: 100%; margin-top: -30px;" class="work-img" src="<%= require('../../../img/index/fimg2.png') %>" alt="">
+
+
+
 
 			</div>
 
