--- a/src/view/layout/empty.ejs
+++ b/src/view/layout/empty.ejs
@@ -6,7 +6,7 @@
 	<meta name="description" content="<%= pf.description %>"/>
 	<meta name="keywords" content="<%= pf.keywords %>">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5">
-  <meta http-equiv="refresh" content="0; URL=https://www.lambda.im/en/index.html">
+  <meta http-equiv="refresh" content="0; URL=https://www.lambda.im/">
 </head>
 <body>
 
