--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -29,7 +29,7 @@ header{
   		display: flex;
       display: -webkit-flex;
   		float: left;
-  		margin-left: 45px;
+  		// margin-left: 45px;
 			margin-top: 19px;
   		.nav-item{
   			padding: 16px 26px;
