--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -297,6 +297,16 @@ section.ecosystem{
 		margin-top: 60px;
 	}
 }
+section.tokensale{
+	img{
+		margin-top: 60px;
+		width: 100%;
+	}
+	p{
+		font-size: 14px;
+		margin-top: 60px;
+	}
+}
 section.roadmap{
 	.column-line{
 		border: 1px solid rgba(255,255,255,0.2);
