--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="contents">
 			<div class="logo">
-				<img src="<%= require('../../img/logowhite.svg') %>" alt="">
+				<img src="<%= require('../../img/logowhite.svg') %>" alt="lambda">
 			</div>
 			<div class="info">
 				<div class="about">
@@ -13,7 +13,7 @@
 							<li class="mao"><a  href="javascript:;" >Ecosystems</a></li>
 							<li class="mao"><a  href="javascript:;" >RoadMap</a></li>
 							<li class="mao"><a  href="http://blog.lambda.im/" >Blog</a></li>
-							<li class="mao"><a  href="mailto:info@lambda.im" >contact us</a></li>
+							<li class="mao"><a  href="mailto:info@lambda.im" >Contact Us</a></li>
 						</ul>
 					<% } else {%>
 						<ul>
@@ -28,15 +28,15 @@
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
 					<ul>
-						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../img/index/telegram.png') %>"/></a></li>
-						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/twitter.png') %>"/></a></li>
+						<li><a href="https://t.me/HelloLambda" target="_blank"><img alt="telegram" src="<%= require('../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img alt="twitter" src="<%= require('../../img/index/twitter.png') %>"/></a></li>
 						<li class="wechatitem">
-							<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank"><img src="<%= require('../../img/index/wechat.png') %>"/></a>
-							<img style="width:100px" class="wechatQRcode"  src="<%= require('../../img/index/wechartrq.jpg') %>"/>
+							<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank"><img alt="wechat" src="<%= require('../../img/index/wechat.png') %>"/></a>
+							<img alt="wechat" style="width:100px" class="wechatQRcode"  src="<%= require('../../img/index/wechartrq.jpg') %>"/>
 						</li>
-						<li><a href="https://www.facebook.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/facebook.png') %>"/></a></li>
-						<li><a href="https://www.linkedin.com/company/lambdaim" target="_blank"><img src="<%= require('../../img/index/linkedin.png') %>"/></a></li>
-						<li><a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank"><img src="<%= require('../../img/index/weibo.png') %>"/></a></li>
+						<li><a href="https://www.facebook.com/Lambdaim" target="_blank"><img alt="facebook" src="<%= require('../../img/index/facebook.png') %>"/></a></li>
+						<li><a href="https://www.linkedin.com/company/lambdaim" target="_blank"><img alt="linkedin" src="<%= require('../../img/index/linkedin.png') %>"/></a></li>
+						<li><a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank"><img alt="weibo" src="<%= require('../../img/index/weibo.png') %>"/></a></li>
 
 					</ul>
 				</div>
