--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -3,7 +3,7 @@
 			<div class="container">
 				<div class="logo">
 					<a href="/index.html">
-						<img src="<%= require('../../img/logowhite.svg') %>" alt="">
+						<img alt="lambda" src="<%= require('../../img/logowhite.svg') %>" alt="">
 					</a>
 				</div>
 				<div class="navbar nav-right">
@@ -46,9 +46,15 @@
 						</div>
 						<div class="nav-item mao" >
 							<a href="javascript:;" >
+								TOKEN DISTRIBUTION
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a href="javascript:;" >
 								ROADMAP
 							</a>
 						</div>
+
 						<div class="nav-item mao" >
 							<a href="https://token.lambda.im/#/register" >
 								REGISTER/SIGN UP
@@ -76,6 +82,7 @@
 								<li class="mao"><a href="javascript:;">APPLICATION SCENARIOS</a></li>
 								<li class="mao"><a href="javascript:;">WORKING PRINCIPLE</a></li>
 								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
+								<li class="mao"><a href="javascript:;">TOKEN DISTRIBUTION</a></li>
 								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
 								<li class="mao"><a href="https://token.lambda.im/#/register">REGISTER/SIGN UP</a></li
 							<% } %>
