--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -8,20 +8,21 @@
 				<div class="about">
 					<% if(pageId == 'indexEn'){ %>
 						<ul>
-							<li class="mao"><a  href="javascript:;" >Application Scenarios</a></li>
-							<li class="mao"><a  href="javascript:;" >Working Principle</a></li>
-							<li class="mao"><a  href="javascript:;" >Ecosystems</a></li>
-							<li class="mao"><a  href="javascript:;" >RoadMap</a></li>
-							<li class="mao"><a  href="http://blog.lambda.im/" >Blog</a></li>
+							<li class="mao"><a  href="#scene" >Application Scenarios</a></li>
+							<li class="mao"><a  href="#principle" >Working Principle</a></li>
+							<li class="mao"><a  href="#ecosystem" >Ecosystems</a></li>
+							<li class="mao"><a  href="#tokensale" >Token Distribution</a></li>
+							<li class="mao"><a  href="#roadmap" >RoadMap</a></li>
+							<li class="mao"><a  href="https://blog.lambda.im/" >Blog</a></li>
 							<li class="mao"><a  href="mailto:info@lambda.im" >Contact Us</a></li>
 						</ul>
 					<% } else {%>
 						<ul>
-							<li class="mao"><a  href="javascript:;" >使用场景</a></li>
-							<li class="mao"><a  href="javascript:;" >工作原理</a></li>
-							<li class="mao"><a  href="javascript:;" >生态系统</a></li>
-							<li class="mao"><a  href="javascript:;" >路线图</a></li>
-							<li class="mao"><a  href="http://blog.lambda.im/" >博客</a></li>
+							<li class="mao"><a  href="#scene" >使用场景</a></li>
+							<li class="mao"><a  href="#principle" >工作原理</a></li>
+							<li class="mao"><a  href="#ecosystem" >生态系统</a></li>
+							<li class="mao"><a  href="#roadmap" >路线图</a></li>
+							<li class="mao"><a  href="https://blog.lambda.im/" >博客</a></li>
 						</ul>
 					<% } %>
 				</div>
