--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -9,48 +9,48 @@
 				<div class="navbar nav-right">
 					<% if(pageId === 'index') {%>
 					<div class="nav-item mao">
-						<a href="javascript:;" >
+						<a href="#scene" >
 							使用场景
 						</a>
 					</div>
 	        <div class="nav-item mao" >
-	          <a href="javascript:;">
+	          <a href="#principle">
 	            工作原理
 	          </a>
 	        </div>
 					<div class="nav-item mao" >
-						<a href="javascript:;">
+						<a href="#ecosystem">
 							生态系统
 						</a>
 					</div>
 					<div class="nav-item mao" >
-						<a href="javascript:;" >
+						<a href="#roadmap" >
 							路线图
 						</a>
 					</div>
 					<% } else if(pageId === 'indexEn'){ %>
 						<div class="nav-item mao">
-							<a href="javascript:;" >
+							<a href="#scene" >
 								APPLICATION SCENARIOS
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;">
+							<a href="#principle">
 								WORKING PRINCIPLE
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;">
+							<a href="#ecosystem">
 								ECOSYSTEM
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;" >
+							<a href="#tokensale" >
 								TOKEN DISTRIBUTION
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a href="javascript:;" >
+							<a href="#roadmap" >
 								ROADMAP
 							</a>
 						</div>
