--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -12,7 +12,7 @@ distributed intelligent computing through logic decoupling and independent imple
 
 				</p>
 				<a class="btn firstBtn" href="https://www.lambda.im/doc/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
-				<a class="btn sendBtn" href="https://token.lambda.im/#/register" target="_blank">Go Whitelist</a>
+				<a id="tokenwhitelist" class="btn sendBtn" href="https://token.lambda.im/#/register" target="_blank">Go Whitelist</a>
 				<div class="contact">
 
 					<ul>
