--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -56,7 +56,7 @@
 						</div>
 
 						<div class="nav-item mao" >
-							<a href="https://token.lambda.im/#/register" >
+							<a id="tokenregister" href="https://token.lambda.im/#/register" >
 								REGISTER/SIGN UP
 							</a>
 						</div>
