--- a/src/css/common/global.less
+++ b/src/css/common/global.less
@@ -145,3 +145,14 @@ p {
 figure{
   margin: 0;
 }
+
+
+.contentmd{
+	background-color: white;
+	margin: 20px;
+	margin-top: 100px;
+	padding:50px;
+	border:2px solid;
+	border-radius:25px;
+
+}
