--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -82,14 +82,14 @@ depending on the usage scenarios.  Lambda has applied these two approaches in bl
 					<div class="imglogo-wrapper">
 					<img alt="APPLICATION SCENARIOS" src="<%= require('../../img/index/scene-log3.png') %>" alt="">
 				</div>
-					<h2 class="title">The right and protection of personal privacy data</h2>
+					<h2 class="title">Access control and protection of personal privacy data</h2>
 					<p class="intro">The advent of the era of big data brings about tremendous challenges to the ownership of personal privacy data. Usually, data collectors have unlimited right to interpret and use data. With the implementation of GDPR and other bills, the contradiction between data privacy among individuals, enterprises and governments is becoming more acute. Lambda provides reliable, secure and privacy-protected data storage and access capability by means of differential privacy, data encryption and signing, identity authentication and access control, and encrypted transmission.</p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
 					<img alt="APPLICATION SCENARIOS" src="<%= require('../../img/index/scene-log4.png') %>" alt="">
 				</div>
-					<h2 class="title">DApp and Block chain</h2>
+					<h2 class="title">DApp and Blockchain</h2>
 					<p class="intro">So far, many decentralized application projects face the risk of failing to implement, one of the main causes being the shortage of data storage infrastructures. In fact, the essence of an application, centralized or decentralized, is the implementation of business logic, interface display, and user interaction around data access. Therefore, data infrastructure is the core issue of blockchain and decentralized applications. Currently, blockchain ledgers are not suitable for business data storage, IPFS cannot store formatted program access data. While Lambda project provides infinitely scalable decentralized data collection, storage, and access capabilities through elegant chain library decoupling, isomorphic function subchain design, and publicly verifiable data ownership proofs.</p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
