修复菜单栏的响应布局问题

--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -279,7 +279,7 @@ header{
 		}
 	}
 }
-@media(max-width:991px) and(min-width:768px){
+@media (min-width:768px) and (max-width:991px){
   header .products-nav {
     .category{
       width: 20%;
