修复了联系方式显示不正常的问题

--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -2,7 +2,7 @@
 	<div class="bg"></div>
 	<section class="banner-contents  firstbgimg">
 		<div class="container">
-			<div class="item col-md-12 col-xs-12">
+			<div class="col-md-12">
 				<h2 style="margin-bottom: 30px;font-size: 29px;"> A Disruptor in Blockchain-Based Storage Solution</h2>
 				<h3 style="margin-bottom: 30px;font-size: 26px;">Providing Unlimited Storage Capabilities</h3>
 				<p style="opacity:0.8;font-size:14px;text-align: left;width: 90%">
