打开动画效果

--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -897,26 +897,26 @@ section.partners {
     opacity: 0.5;
   }
 }
-// @keyframes sf-fly-by-5 {
-//   from {
-//     transform: translateZ(-2400px);
-//     opacity: 0.25;
-//   }
-//   to {
-//     transform: translateZ(-1800px);
-//     opacity: 0.3333333333;
-//   }
-// }
-// @keyframes sf-fly-by-6 {
-//   from {
-//     transform: translateZ(-3000px);
-//     opacity: 0.1;
-//   }
-//   to {
-//     transform: translateZ(-2400px);
-//     opacity: 0.1333333333;
-//   }
-// }
+@keyframes sf-fly-by-5 {
+  from {
+    transform: translateZ(-2400px);
+    opacity: 0.25;
+  }
+  to {
+    transform: translateZ(-1800px);
+    opacity: 0.3333333333;
+  }
+}
+@keyframes sf-fly-by-6 {
+  from {
+    transform: translateZ(-3000px);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateZ(-2400px);
+    opacity: 0.1333333333;
+  }
+}
 .star-field {
   position: fixed;
   top: 0;
